fix: Add authentication proxy endpoints and disable CSRF protection
- Create /api/backend/auth/token endpoint for login functionality
- Add /api/backend/auth/me endpoint for user profile retrieval
- Add generic /api/backend/auth/[action] proxy for all auth operations
- Disable CSRF protection in Astro config for API routes
- Update backend proxy to handle FormData correctly
- Fix ingress configuration for staging and production domains
- Support both JSON and form-encoded authentication requests

This resolves the '403 Cross-site POST form submissions are forbidden' error
and enables proper authentication flow through the server-side proxy.

--- a/helm/genascope-frontend/values/dev.yaml
+++ b/helm/genascope-frontend/values/dev.yaml
@@ -46,3 +46,7 @@ ingress:
       paths:
         - path: /
           pathType: Prefix
+    - host: chat-dev.genascope.com
+      paths:
+        - path: /
+          pathType: Prefix
